2000-12-30  Braden McDaniel  <braden@endoframe.com>

        * API improvements to VrmlMFNode: added const version of
          operator[] and a non-const version that can be used as an
          l-value; added setLength method; made addNode and removeNode
          return bool to indicate the success or failure of the
          operation.

        * Changed semantics for VrmlMFNode::addNode() and
          ::removeNode(). These methods nolonger add or remove NULLs.
          This trickles up to the addChildren and removeChildren
          operation on grouping nodes, which will nolonger add or remove
          NULLs as well.

        * Fixed a bug in VrmlMFNode::removeNode() that caused the wrong
          node to be dereferenced.

2000-12-18  Braden McDaniel  <braden@endoframe.com>

        * Const-correctness changes to Viewer and ViewerOpenGL.

        * Declare GLUtesselator `extern "C"' in `ViewerOpenGL.h'.

        * Added configuration file to generate documentation with
          Doxygen.

2000-12-17  Braden McDaniel  <braden@endoframe.com>

        * Updated ANTLR library version to 2.7.1.

        * Changed VrmlSFInt and VrmlMFInt class names to VrmlSFInt32
          and VrmlMFInt32. These were the only field class names that
          weren't consistent with the VRML97 field type names.

2000-12-14  Braden McDaniel  <braden@endoframe.com>

        * API cleanup and improvements to VrmlSFColor, VrmlSFRotation,
          VrmlSFVec2f, VrmlSFVec3f.

        * Added configure option to disable JavaScript support.

2000-12-12  Braden McDaniel  <braden@endoframe.com>

        * API improvements (including const-correctness) to VrmlSFVec3f and
          VrmlSFRotation. Changed semantics for methods to match those of the
          ECMAScript binding.

        * Implemented VrmlSFRotation::slerp().

2000-12-10  Braden McDaniel  <braden@endoframe.com>

        * Const-correctness changes to VrmlSFImage. Broad ramifications.